Merged 2025R4 into CORE-635